# publish-data-s3

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: project.yml  release.yml  report.yml  tests.yml  version.yml
infra/function/: template.yml
infra/github/: policy.yml  role.yml  samconfig.toml  template.yml
infra/lambda/: samconfig.toml  template.yml
infra/role/: samconfig.toml  template.yml
infra/sar/: samconfig.toml  template.yml
infra/shared/: bucket.yml  queue.yml  samconfig.toml  template.yml
infra/stage/: samconfig.toml  template.yml
src/: handler.rs  main.rs  reader.rs
src/handler/: client.rs  config.rs  file_utils.rs  processor.rs  s3.rs  sqs.rs
src/handler/file_utils/: batch.rs  decompress.rs
src/handler/file_utils/batch/: csv.rs
src/handler/s3/: client.rs
src/handler/sqs/: client.rs  file_metadata.rs
src/reader/: batch.rs  client.rs  decompress.rs  file_type.rs
src/reader/file_type/: csv.rs
src/schema/: receipt.rs  transaction.rs  user.rs
