[package]
name = "publish-data-s3"
version = "0.0.5"
edition = "2021"

[dependencies]
serde = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "io-util"] }
tokio-util = "0.7.8"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt"] }
lambda_runtime = "0.8.2"
aws_lambda_events = "0.11.1"
aws-sdk-s3= "0.30.0"
aws-sdk-sqs = "0.30.0"
aws-config = "0.56.1"
async-compression = { version = "0.4.2", features = ["tokio", "gzip"] }
bytes = "1.5.0"
csv = "1.2.2"
async-trait = "0.1.73"
futures = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"] }
parquet = { version = "47.0.0", features = [] }
private-publish-data-s3 = { git = "https://github.com/tiki/private", tag = "publish/data/s3/0.5.2", features = ["dummy"] }

[dev-dependencies]
tokio-test = "0.4.3"
tracing-test = "0.2.4"
chrono = "0.4.30"
